# aos

./: .gitignore  AGENTS.md  CLAUDE.md  DEVELOPMENT_GUIDE.md  README.md  SPEC_DRIVEN_DEVELOPMENT.md  agent.md  cleanup-report.md  cleanup_report.md  main.py  package-lock.json  package.json  pyproject.toml  report.md  summary.txt  turbo.json
.codex/environments/: environment.toml
.playwright-cli/: page-2026-02-27T14-07-20-885Z.yml  page-2026-02-27T14-07-24-356Z.yml  page-2026-02-27T14-07-38-928Z.yml  page-2026-02-27T14-09-46-318Z.yml  page-2026-02-27T14-09-54-985Z.yml
.serena/: project.yml
apps/api/: package.json  pyproject.toml
apps/api/app/: main.py
apps/api/data/: i-130.fields.csv  i-130.fields.json
apps/api/fixtures/: basic_petitioner.json  full_addresses.json  smoke_test.json
apps/api/notebooks/: pdf_field_demo.ipynb
apps/api/scripts/: eval_fill.py  extract_fields.py
apps/web/: next.config.ts  package.json  sentry.server.config.ts  vitest.config.ts
apps/web/.next/dev/: trace  (+1 more)
apps/web/convex/: forms.ts  petitioner.ts  schema.ts
apps/web/e2e/: .review-package.spec.ts.swp  address-history.spec.ts  review-package.spec.ts
apps/web/playwright-report/: index.html
apps/web/src/: instrumentation-client.ts
prompts/: README.md
specs/: README.md  TEMPLATE.md
specs/address-history/: README.md  gherkin.feature  schema.md  user-stories.md
specs/address-history/tasks/: README.md  board.md  tasks.json  tasks.md
specs/international-address/: README.md  gherkin.feature  schema.md  user-stories.md
specs/tasks/: scheduled-cleanup-agent.md
(+387 files in other folders)
